<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <Button
        android:id="@+id/pushAtCornerEntryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/push_at_corner_entry"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/pushAtCornerExitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/push_at_corner_exit"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/looseAtCornerEntryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/loose_at_corner_entry"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/looseAtCornerExitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/loose_at_corner_exit"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/fourWheelDriftButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:text="@string/four_wheel_drift"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

</LinearLayout>